# labelImg

./: .gitignore  Makefile  README.rst  __main__.py  labelImg.py  pyproject.toml
.github/workflows/: package.yml
alembic/: env.py
alembic/versions/: 219ff6786f6d_add_settings_table.py  9c69e1e1bfdc_initial_migration.py
libs/: __init__.py  canvas.py  colorDialog.py  combobox.py  constants.py  database.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  lightWidget.py  pascal_voc_io.py  settings.py  shape.py  statistics_dialog.py  stringBundle.py  toolBar.py  undo_manager.py  ustr.py  utils.py  yolo_io.py  zoomWidget.py
readme/: README.jp.rst  README.zh.rst
