[project]
name = "labelImg"
version = "1.8.6"
description = "LabelImg is a graphical image annotation tool and label object bounding boxes in images"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "TzuTa Lin", email = "tzu.ta.lin@gmail.com" }
]
keywords = ["labelImg", "labelTool", "development", "annotation", "deeplearning"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyqt5>=5.14",
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/tzutalin/labelImg"
Repository = "https://github.com/tzutalin/labelImg"

[project.gui-scripts]
labelImg = "labelImg.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["labelImg", "labelImg.libs"]
package-dir = {"labelImg" = "."}
include-package-data = true

[tool.setuptools.package-data]
labelImg = ["data/predefined_classes.txt", "resources/**/*"]

[tool.uv]
# Required for cross-platform compatibility - ensures uv picks package versions
# that have wheels available for all these platforms
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
